style:fixed covers

--- a/src/components/ProfileRatingCard/styles.module.scss
+++ b/src/components/ProfileRatingCard/styles.module.scss
@@ -23,7 +23,7 @@
   img {
     padding-right: 15px;
     width: 100px;
-    height: 140px;
+    height: 125px;
   }
 }
 
